[workspace]
members = ["crates/tiny-attributes"]

[workspace.package]
authors = ["Anton Fredriksson <anton.e.fredriksson@icloud.com>"]
license = "MIT"
rust-version = "1.82.0"

# ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
[package]
name = "tiny"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hashbrown = "0.14.5"
tiny_http = "0.12.0"

# caching dependencies
mini-moka = { version = "0.10.3", default-features = false, optional = true }

# macro dependencies
tiny-attributes = { path = "crates/tiny-attributes", optional = true }

[features]
default = ["cache", "attributes"]
cache = ["dep:mini-moka"]
attributes = ["dep:tiny-attributes"]
